<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="str_action_edit_team_players">Edit Team and Players</string>
    <string name="str_action_stop_edit_team_players">Stop Editing</string>
    <string name="str_action_half">Half</string>
    <string name="str_action_save_game">Save, Clear and Email Game</string>
    <string name="str_load_web_roster">Load Roster from Web</string>
    <string name="str_load_roster_from_web">Load Roster from Web</string>

    <string name="app_name">Parity League Stats</string>
    <string name="str_hello_world">Hello world!</string>
    <string name="str_action_settings">Settings</string>

    <string name="str_btnPull">Pull</string>

    <string name="str_OActionsPass">Pass</string>
    <string name="str_OActionsDrop">Drop</string>
    <string name="str_OActionsThrowAway">Throw Away</string>
    <string name="str_OActionsPoint">POINT</string>

    <string name="str_DActionsD">D</string>
    <string name="str_DActionsCatchD">Catch D</string>

    <string name="str_DActionsDCatch">Catch / Intercept</string>
    <string name="str_DActionsCalihan">CALIHAN!</string>

    <string name="str_DefaultLeftTeam">Team A</string>
    <string name="str_DefaultRightTeam">Team B</string>

    <string name="str_UndoButton">UNDO</string>
    <string name="str_Zero">0</string>
    <string name="str_Separator">:</string>
    <string name="mode_button_done">Done</string>
    <string name="mode_button_edit">Select Active Players</string>

</resources>
